Drop support for Ehcache 1.3
Ehcache 1.4 is now the minimum required version